fix menu overflow

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -98,7 +98,7 @@ body {
 #navigation {
 	display: flex;
 	flex-direction: column;
-	gap: 30px;
+	gap: 25px;
 }
 
 .tab-heading {
